Ancla T0, corrección unidades y optimización
CAMBIOS PRINCIPALES:
- Lógica de Reporte: Migración a T0 (Evento Físico) como ancla maestra para visualizar correctamente la pérdida de Traps en pruebas de estrés.
- Corrección Crítica: Implementada conversión explícita de Nanosegundos a Segundos en logs de RPi para solucionar tablas vacías.
- Timing: Ajuste de ventanas de correlación (<30ms) y tolerancia cero en T5 para evitar aliasing y latencias negativas en ráfagas de alta frecuencia (25Hz).
- Rendimiento: Optimización del algoritmo de búsqueda (`find_closest_next`) mediante "early exit" para reducir drásticamente el tiempo de procesamiento en tests de larga duración.
- Nuevas Funcionalidades:
  * Implementación del escenario de barrido PWM (Sensibilidad).
  * Añadida función `hil_get_logs_force` para rescate de datos en memoria.

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,1230,5],[],[[6,0,0,[7],[0,1222,2,8],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,1270090],[],[[4,0,5,[],[1,528,1269530],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Module IBTU FFT","*c:\\Users\\sergio.bret\\OneDrive - alfanar\\Escritorio\\ZIV\\TFG\\Proyecto\\tests\\Module_IBTU_FFT.robot","eNq9zbsKwkAQRuFXkYCl+cUyxBReVlKIFhsLm7CJs7qwZGBmFHx78xQW52tPHRYvobgtYspUAdhX6JREMfNMXA5ChstEB0kfWm7Wq7mQY5iC4KijJGNJjHt7g3cnXIW/NBrDSE1x5sc7U9/ufNc750vhga1o/jirEZofBjVOqA==","*<p>This is a basic test\x3c/p>","*Suite setup failed:\nSuite Setup falló: [Errno 2] No such file or directory: 'C:\\\\Users\\\\sergio.bret\\\\OneDrive - alfanar\\\\Escritorio\\\\ZIV\\\\TFG\\\\Proyecto\\\\session.json'","*Assign Reception Operation Mode","*robot:exit","*Test execution stopped due to a fatal error."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Recue Data","*c:\\Users\\sergio.bret\\OneDrive - alfanar\\Escritorio\\ZIV\\TFG\\Proyecto\\tests\\Recue_Data.robot","eNq9zbEKwlAMRuFXkYKj/aVjqV2sSidF1MFF0kuuBkoDSRR8e/sUDudbT0OLl3HeFFlGrgFsa1ydzTHzFC0H48Bx4s7kw8tqvZqjMdNEhp0nk1ATxb2/4bI/4GT65RSKYA/HmdObHx0FlaaDRtH+59OA2h8nKkvS","*Rescatar Datos De La Noche","*<p>NO ENVÍA COMANDOS. Solo recupera los logs que están en memoria de la RPi y genera el CSV.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"combined":"NOT robot:exit","elapsed":"00:00:00","fail":0,"info":"combined","label":"NOT robot:exit","pass":0,"skip":0}],[{"elapsed":"00:00:01","fail":1,"id":"s1","label":"Module IBTU FFT","name":"Module IBTU FFT","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:21:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:21:10","fail":0,"id":"s1","label":"Recue Data","name":"Recue Data","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1761050518936;
+window.output["baseMillis"] = 1764918578546;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 1284;
+window.output["generated"] = 1270224;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
