--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,1270090],[],[[4,0,5,[],[1,528,1269530],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,2198],[],[[5,0,0,[],[1,1592,602],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Recue Data","*c:\\Users\\sergio.bret\\OneDrive - alfanar\\Escritorio\\ZIV\\TFG\\Proyecto\\tests\\Recue_Data.robot","eNq9zbEKwlAMRuFXkYKj/aVjqV2sSidF1MFF0kuuBkoDSRR8e/sUDudbT0OLl3HeFFlGrgFsa1ydzTHzFC0H48Bx4s7kw8tqvZqjMdNEhp0nk1ATxb2/4bI/4GT65RSKYA/HmdObHx0FlaaDRtH+59OA2h8nKkvS","*Rescatar Datos De La Noche","*<p>NO ENVÍA COMANDOS. Solo recupera los logs que están en memoria de la RPi y genera el CSV.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*HIL Netstorm Control","*c:\\Users\\sergio.bret\\OneDrive - alfanar\\Escritorio\\ZIV\\TFG\\Proyecto\\tests\\HIL_Netstorm_Control.robot","eNq9jb0KwkAQBl9FApbmk5Qhpok/CYhaqIVNuIQ9PThvYXcRfHvvKSxmqoFp3OIl5DeFD5FqAF2Nm5Iosp6By0nIcE60lfChZbVeZVz0LjnBTmcJxhIYj+GO6/6Ai/CXZmMYqSn64TieyDRH77HjZMKxFJ7Yivbfxwau/QGrIFPo","*<p>Tests para controlar el equipo Netstorm, de Albedo.\x3c/p>","*Escenario WP3: Togglear Ruido en Netstorm"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:21:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:21:10","fail":0,"id":"s1","label":"Recue Data","name":"Recue Data","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:02","fail":0,"id":"s1","label":"HIL Netstorm Control","name":"HIL Netstorm Control","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1764918578546;
+window.output["baseMillis"] = 1765377077122;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 1270224;
+window.output["generated"] = 2221;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
