Corregir driver VNC y estabilizar pruebas de estrés (WP3)
- HIL_Tests.robot: Implementar lógica de "Sanitización" (Clean -> Disconnect) entre tests para evitar bloqueos por saturación de red.
- Sustituir "Wait For Traps Silence" por "Sleep" fijo en escenarios de pérdida alta (Loss > 40%) para evitar deadlocks.
- Corregir lógica de Teardown para asegurar restauración de perfil CLEAN antes de desconectar.
- Solucionar error de sintaxis en nombres de archivo (timestamp) en Windows.

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,2198],[],[[5,0,0,[],[1,1592,602],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,24209],[],[[5,0,6,[],[0,1803,22401,7],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*HIL Netstorm Control","*c:\\Users\\sergio.bret\\OneDrive - alfanar\\Escritorio\\ZIV\\TFG\\Proyecto\\tests\\HIL_Netstorm_Control.robot","eNq9jb0KwkAQBl9FApbmk5Qhpok/CYhaqIVNuIQ9PThvYXcRfHvvKSxmqoFp3OIl5DeFD5FqAF2Nm5Iosp6By0nIcE60lfChZbVeZVz0LjnBTmcJxhIYj+GO6/6Ai/CXZmMYqSn64TieyDRH77HjZMKxFJ7Yivbfxwau/QGrIFPo","*<p>Tests para controlar el equipo Netstorm, de Albedo.\x3c/p>","*Escenario WP3: Togglear Ruido en Netstorm"]);
+window.output["strings"] = window.output["strings"].concat(["*","*HIL Tests","*c:\\Users\\sergio.bret\\OneDrive - alfanar\\Escritorio\\ZIV\\TFG\\Proyecto\\tests\\HIL_Tests.robot","eNq9jb0KwnAMB19FCo7tTxxL7eJnoaBDdXCRtOSvgdJAEgTf3voSDnfcdhUtXsZpkyUZuQSwLXF1Nsesp2jRGwfOE+9M3rxcr/IZGhNNZNj7YBJqorg3N3SHIy6mHx5CEezhODXto/tVYdprZPVfNhWo/gJ6CErW","*<p>Tests para controlar el Hardware-in-the-Loop (Raspberry Pi).\x3c/p>","*WP3 Escenario B Loss_Brakepoint","*<p>Itera incrementando la pérdida de paquetes para encontrar el límite del equipo. El test se detiene cuando la Disponibilidad baja del 100%.\x3c/p>","*ERROR CRÍTICO: 'ACTIVE_APP_REF' no está asignado."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:02","fail":0,"id":"s1","label":"HIL Netstorm Control","name":"HIL Netstorm Control","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:22","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:24","fail":1,"id":"s1","label":"HIL Tests","name":"HIL Tests","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1765377077122;
+window.output["baseMillis"] = 1765970582515;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 2221;
+window.output["generated"] = 24272;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
